tests/fixtures/invalid/set_float.py
# Cannot call set() with Float
x = set(1.0)
